--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -5,6 +5,14 @@
     android:orientation="horizontal"
     android:padding="@dimen/activity_margin">
 
+    <ImageView
+        android:id="@+id/unit_image_view"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="2"
+        android:scaleType="centerCrop" />
+
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -21,6 +29,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-condensed"
                 android:text="@string/item_list_name"
+                android:paddingLeft="6dp"
                 android:textColor="#000000" />
 
             <TextView
@@ -43,6 +52,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-condensed"
                 android:text="@string/item_list_quantity"
+                android:paddingLeft="6dp"
                 android:textColor="#000000" />
 
             <TextView
@@ -74,6 +84,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-condensed"
                 android:text="@string/item_list_price"
+                android:paddingLeft="6dp"
                 android:textColor="#000000" />
 
             <TextView
