--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="center_vertical"
         android:layout_weight="2"
-        android:scaleType="centerCrop" />
+        android:scaleType="fitCenter" />
 
     <LinearLayout
         android:layout_width="0dp"
@@ -109,6 +109,7 @@
 
     <ImageView
         android:id="@+id/buy_one"
+        android:onClick="buyOne"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
